@@ -32,3 +32,4 @@ depth: 1
  * Prevent "Entries per page" dropdown on images index view from reverting to 10 (Tidiane Dia)
  * Set related_name on user revision relation to avoid conflict with django-reversion (Matt Westcott)
  * Ensure the "recent edits" panel on the Dashboard (home) page works when page record is missing (Matt Westcott)
+ * Only add Translate buttons when the `simple_translation` app is installed (Dan Braghis)
