@@ -53,7 +53,8 @@ def page_listing_more_buttons(page, page_perms, next_url=None):
         page_perms.user.has_perm("simple_translation.submit_translation")
         and not page.is_root()
     ):
-        # If there's at least one locale that we haven't translated into yet, show "Translate this page" button
+        # If there's at least one locale that we haven't translated into yet,
+        # show "Translate this page" button
         has_locale_to_translate_to = Locale.objects.exclude(
             id__in=page.get_translations(inclusive=True).values_list(
                 "locale_id", flat=True
@@ -63,6 +64,33 @@ def page_listing_more_buttons(page, page_perms, next_url=None):
         if has_locale_to_translate_to:
             url = reverse("simple_translation:submit_page_translation", args=[page.id])
             yield wagtailadmin_widgets.Button(_("Translate"), url, priority=60)
+
+
+@hooks.register("register_page_header_buttons")
+def page_header_buttons(page, page_perms, next_url=None):
+    if not page.is_root() and page_perms.user.has_perm(
+        "simple_translation.submit_translation"
+    ):
+        # If there's at least one locale that we haven't translated into yet,
+        # show "Translate this page" button
+        has_locale_to_translate_to = Locale.objects.exclude(
+            id__in=page.get_translations(inclusive=True).values_list(
+                "locale_id", flat=True
+            )
+        ).exists()
+
+        if has_locale_to_translate_to:
+            url = reverse("simple_translation:submit_page_translation", args=[page.id])
+            yield wagtailadmin_widgets.Button(
+                _("Translate"),
+                url,
+                icon_name="globe",
+                attrs={
+                    "title": _("Translate this page")
+                    % {"title": page.get_admin_display_title()}
+                },
+                priority=80,
+            )
 
 
 @hooks.register("register_snippet_listing_buttons")
